must run task added

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,12 @@ dependAsset.doLast {
     println '\n------ dependAsset Task doLast Executed Successfully ---------'
 }
 
+task mustRunAsset << {
+    println '\n------ mustRunAsset Task Executed Successfully ---------'
+}
+
+mustRunAsset.mustRunAfter dependAsset
+
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("ch.qos.logback:logback-classic:1.+")
