--- a/src/main/resources/asset_rest_service.properties
+++ b/src/main/resources/asset_rest_service.properties
@@ -1,2 +1,10 @@
 server.port: 9004
-iris.smdp.simulator.response.file: yet to define
+response.file: yet to define
+
+
+db.driver : com.mysql.jdbc.Driver
+db.url : jdbc:mysql://localhost:3306/assetdb
+db.username : root
+db.password : root
+
+hb.sqlDialect : org.hibernate.dialect.MySQLDialect
