--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.2.RELEASE")
+        classpath("mysql:mysql-connector-java:5.+")
     }
 }
 apply plugin: 'java'
@@ -47,5 +48,10 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("ch.qos.logback:logback-classic:1.+")
     compile("com.fasterxml.jackson.core:jackson-databind:2.6.5")
+    compile("mysql:mysql-connector-java:5.+")
+    compile("org.springframework.boot:spring-boot-starter-data-jpa:1.1.4.RELEASE")
+    compile("org.hibernate:hibernate-core:4.3.6.Final")
+    compile("commons-dbcp:commons-dbcp:1.4")
+    
 }
 task wrapper(type: Wrapper) { gradleVersion = '2.2.1' }
