--- a/src/main/resources/asset_rest_service.properties
+++ b/src/main/resources/asset_rest_service.properties
@@ -1,6 +1,5 @@
 server.port: 9004
-response.file: yet to define
-
+fileLocation.toMonitor: E:/FileWatcher/
 
 db.driver : com.mysql.jdbc.Driver
 db.url : jdbc:mysql://localhost:3306/assetdb
