--- a/src/main/resources/asset_rest_service.properties
+++ b/src/main/resources/asset_rest_service.properties
@@ -2,7 +2,7 @@ server.port: 9004
 fileLocation.toMonitor: E:/FileWatcher/
 
 db.driver : com.mysql.jdbc.Driver
-db.url : jdbc:mysql://localhost:3306/assetdb
+db.url : jdbc:mysql://localhost:3306/assetdb?autoReconnect=true&useSSL=false
 db.username : root
 db.password : root
 
